# hackevl2025

./: .gitignore  INTEGRATION_GUIDE.md  MUSIC_AGENT_SETUP.md  README.md  README_ADK.md  requirements.txt  start_adk_voice_agent.py  start_behavioral_analyzer.py  start_integrated_system.py  test_api_server.py  test_integration.py  test_standalone_api.py
behavioral_analyzer/: README.md  minimal_web_ui.py  pyproject.toml  requirements.txt  run_web_ui.py  simple_web_ui.py
behavioral_analyzer/behavioral_analyzer/: __init__.py  __main__.py  api_server.py  audio_analyzer.py  calibration.py  config.py  db.py  main.py  object_detector.py  unified_analyzer.py  utils.py  video_analyzer.py  web_ui.py
behavioral_analyzer/scripts/: run_analyzer.py
behavioral_analyzer/static/css/: dashboard.css
behavioral_analyzer/static/js/: dashboard.js
behavioral_analyzer/templates/: dashboard.html  minimal_dashboard.html
behavioral_analyzer/tests/: __init__.py  test_config.py
client/: index.html
client/src/api/: gemini-api.js
server/: api_server.py  pyproject.toml  server.py  test_music_agent.py  test_music_integration.py
server/config/: config.py  music_agent_config.py  system-instructions.txt
server/core/: conversational_agent.py  gemini_client.py  session.py  state_agent.py  tool_handler.py  websocket_handler.py
server/core/behavioral_extractors/: README.md  __init__.py  base_extractor.py  dummy_extractor.py  extractor_factory.py  real_extractor.py
server/core/music_agent/: __init__.py  intent_detector.py  music_recommendation_agent.py  recommendation_engine.py  spotify_client.py  youtube_client.py
