[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "certifi==2024.12.14",
    "google-api-python-client==2.122.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.0",
    "google-cloud-secret-manager==2.19.0",
    "google-genai==1.3.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "websockets==14.1",
    "spotipy==2.23.0",
    "google-api-python-client==2.122.0",
]
